fix: adjust box-sizing on #x_pageNo to resolve wrapping issue

--- a/XOT/base/_footer.scss
+++ b/XOT/base/_footer.scss
@@ -11,6 +11,7 @@
 #x_pageNo {
     background: transparent;
     padding-top: 8px;
+    box-sizing: initial; //fix wrapping issue
 }
 
 /*hide resize button*/
