--- a/css/xot_main.css
+++ b/css/xot_main.css
@@ -1311,6 +1311,7 @@ a.x_glossary:link, a.x_glossary:visited, a.x_glossary:hover, a.x_glossary:active
 #x_pageNo {
   background: transparent;
   padding-top: 8px;
+  box-sizing: initial;
 }
 
 /*hide resize button*/
